--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   multi_select_flutter: ^4.1.2
   flutter_share: ^2.0.0
   pinch_zoom: ^1.0.0
+  table_calendar: ^3.0.5
 
 dev_dependencies:
   flutter_test:
