--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,19 @@ allprojects {
 }
 
 rootProject.buildDir = '../build'
+rootProject.allprojects {
+
+    subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency { details ->
+                if (details.requested.group == 'com.github.bumptech.glide'
+                        && details.requested.name.contains('glide')) {
+                    details.useVersion '4.11.0'
+                }
+            }
+        }
+    }
+}
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
     project.evaluationDependsOn(':app')
