--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,10 @@ dependencies:
   flutter_share: ^2.0.0
   pinch_zoom: ^1.0.0
   table_calendar: ^3.0.5
-
+  drishya_picker: ^1.0.3
+  card_swiper: ^2.0.3
+  animations: ^2.0.0
+  flutter_spinkit: ^5.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
